<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment_title_menu">Recipes</string>
    <string name="favorite_recipes_fragment_title_menu">Favorite</string>
    <string name="food_joke_fragment_title_menu">Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="button">Buttun</string>
    <string name="image_error">image error</string>
    <string name="image_view_recipe_content_dec">image view recipe</string>
    <string name="textview_title_card_View">TextView</string>
    <string name="dec_card_view">gfxggggggggggbgggggggggggggggggggggggggggggggggggggggggggggggggggggggg</string>
    <string name="heart_image">heart image</string>
    <string name="_100">100</string>
    <string name="clock_image">clock_image</string>
    <string name="leaf_image">leaf_image</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan_chip">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
</resources>