<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="result"
            type="com.mohamedandmostafa.foody.models.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipes_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/row_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/recipe_image_view"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/image_view_recipe_content_dec"
                    loadImageFromUrl="@{result.image}"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/courgette"
                    android:maxLines="2"
                    android:text="@{result.title}"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintStart_toEndOf="@+id/recipe_image_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{result.summary}"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/title_text_view"
                    app:layout_constraintStart_toStartOf="@+id/title_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

                <ImageView
                    android:id="@+id/heart_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/heart_text_view"
                    app:layout_constraintHorizontal_bias="0.352"
                    app:layout_constraintStart_toStartOf="@+id/heart_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/description_text_view"
                    app:layout_constraintVertical_bias="0.01999998"
                    app:srcCompat="@drawable/ic_heart"
                    app:tint="@color/red"
                    android:contentDescription="@string/heart_image" />

                <TextView
                    android:id="@+id/heart_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    setNumberOfLikes="@{result.aggregateLikes}"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/description_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/heart_image_view" />

                <ImageView
                    android:id="@+id/clock_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/yellow"
                    app:layout_constraintEnd_toEndOf="@+id/clock_text_view"
                    app:layout_constraintStart_toStartOf="@+id/clock_text_view"
                    app:layout_constraintTop_toTopOf="@+id/heart_image_view"
                    app:srcCompat="@drawable/ic_clock"
                    android:contentDescription="@string/clock_image" />

                <TextView
                    android:id="@+id/clock_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/_100"
                    setNumberOfMinutes="@{result.readyInMinutes}"
                    android:textColor="@color/yellow"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/heart_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/clock_image_view" />

                <ImageView
                    android:id="@+id/leaf_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    applyVeganColor="@{result.vegan}"
                    app:layout_constraintEnd_toEndOf="@+id/leaf_text_view"
                    app:layout_constraintStart_toStartOf="@+id/leaf_text_view"
                    app:layout_constraintTop_toTopOf="@+id/clock_image_view"
                    app:srcCompat="@drawable/ic_leaf"
                    android:contentDescription="@string/leaf_image" />

                <TextView
                    android:id="@+id/leaf_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/vegan"
                    applyVeganColor="@{result.vegan}"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/clock_text_view"
                    app:layout_constraintTop_toTopOf="@+id/leaf_image_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>